--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -275,7 +275,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Josh
+ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -2929,6 +2929,14 @@ AnimGraphNode_BlendSpacePlayer.Settings=True
 AnimGraphNode_BlendSpacePlayer.Relevancy=True
 AnimationTransitionGraph.Graph=True
 AnimStateConduitNode.GraphNodeDetail=True
+AnimGraphNode_StateResult.Settings=True
+AnimMontage.Animation=True
+AnimMontage.BlendOption=True
+AnimMontage.SyncGroup=True
+AnimMontage.AdditiveSettings=True
+AnimMontage.TimeStretchCurve=True
+AnimMontage.MetaData=True
+AnimMontage.Thumbnail=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3087,6 +3095,9 @@ None=======
 /Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=0
 /Game/Josh/HumanAnimBP.HumanAnimBP=0
 /Game/Josh/1HHumanIdleRun_BP.1HHumanIdleRun_BP=0
+/Game/Josh/AnimationsTest/Push.Push=1
+/Game/Josh/AnimationsTest/Shield_Sheath.Shield_Sheath=1
+/Game/Josh/AnimationsTest/Heavy_Slam_Montage.Heavy_Slam_Montage=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -4085,26 +4096,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Josh/1HHumanIdleRun_BP
-MRUItem1=/Game/Josh/HumanIdleRun_BS
-MRUItem2=/Game/Josh/HeavyHumanIdleRun_BS
-MRUItem3=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem4=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem5=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem6=/Game/Josh/HumanAnimBP
-MRUItem7=/Game/Josh/TestRoom/Running_Anim
-MRUItem8=/Game/Models/Armour/ShoulderPlateArmour/ShoulderPlateChest
+MRUItem0=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
+MRUItem1=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem2=/Game/Josh/AnimationsTest/Heavy_Uppercut
+MRUItem3=/Game/Josh/HeavyHumanIdleRun_BS
+MRUItem4=/Game/Josh/HumanIdleRun_BS
+MRUItem5=/Game/Josh/1HShieldHumanIdleRun_BP
+MRUItem6=/Game/Josh/1HHumanIdleRun_BP
+MRUItem7=/Game/Josh/BowHumanIdleRun_BP
+MRUItem8=/Game/Josh/Skinned_Player_Skeleton
 MRUItem9=/Game/Josh/Skinned_Player
-MRUItem10=/Game/Models/Armour/BronzeHalfHelmet/BronzeHalfHelm
-MRUItem11=/Game/Models/Armour/BronzeFullHelmet/BronzeFullHelm
-MRUItem12=/Game/Models/Armour/LeatherCowlHelmet/LeatherCowlHelm
-MRUItem13=/Game/Josh/AnimationsTest/360
-MRUItem14=/Game/Josh/Skinned_Player_Skeleton
-MRUItem15=/Game/Models/Armour/Sandals/Sandal2
-MRUItem16=/Game/Models/Armour/Sandals/sandal_1_ben_wilkinson
-MRUItem17=/Game/Models/Armour/Sandals/Sandal1
-MRUItem18=/Game/Models/Armour/MetalPlateLegsArmour/MetalLegShin2
-MRUItem19=/Game/Models/Armour/LeatherLegArmour/LeatherLegShin1_2
+MRUItem10=/Game/Josh/AnimationsTest/Shield_Sheath
+MRUItem11=/Game/Josh/HumanAnimBP
+MRUItem12=/Game/Josh/AnimationsTest/Push
+MRUItem13=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem14=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
+MRUItem15=/Game/Josh/TestRoom/Running_Anim
+MRUItem16=/Game/Models/Armour/ShoulderPlateArmour/ShoulderPlateChest
+MRUItem17=/Game/Models/Armour/BronzeHalfHelmet/BronzeHalfHelm
+MRUItem18=/Game/Models/Armour/BronzeFullHelmet/BronzeFullHelm
+MRUItem19=/Game/Models/Armour/LeatherCowlHelmet/LeatherCowlHelm
 
 [WidgetTemplatesExpanded]
 Extra=False
