drop code added

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -220,7 +220,7 @@ Calc Defence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.Default
 MulticastDelegateProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 TopDownGameMode_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 TopDownCharacterCleaned_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-Inventory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+Inventory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 MapProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BaseShield_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
@@ -320,17 +320,13 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/CoolDownComponent.CoolDownComponent
-OpenAssetsAtExit=/Game/T019847G/Boss/BossFightManager.BossFightManager
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
-OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
-OpenAssetsAtExit=/Game/T019847G/Boss/CrystalBossActor.CrystalBossActor
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
-OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
+OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseShield.BaseShield
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -700,7 +696,7 @@ ByteProperty.DefaultValueCategory=True
 ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
 EdGraph.Graph=True
-EdGraph.Inputs=True
+EdGraph.Inputs=False
 EdGraph.Outputs=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
@@ -4608,6 +4604,25 @@ REINST_CorruptedSlave_C_1167.Camera=True
 REINST_CorruptedSlave_C_1167.Pawn=True
 REINST_CorruptedSlave_C_1167.Input=True
 REINST_CorruptedSlave_C_1167.Actor=True
+CrystalBossActor_C.Default=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Variable=True
+ChildActorComponent.Cooking=True
+TopDownCharacter_C.EquipmentRefs=True
+BaseWeapon_C.Surface Materials=True
+BaseWeapon_C.Geometry=True
+BaseWeapon_C.Surface Properties=True
+TopDownCharacter_C.Surface Materials=True
+TopDownCharacter_C.Geometry=True
+TopDownCharacter_C.Surface Properties=True
+Inventory_C.Surface Materials=True
+Inventory_C.Geometry=True
+Inventory_C.Surface Properties=True
+BaseShield_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -4822,6 +4837,13 @@ None=======
 /Game/Will/Miner.Miner=0
 /Game/Will/Area1_Blocker_MinableRubble.Area1_Blocker_MinableRubble=0
 /Game/T019847G/Boss/Crystal.Crystal=0
+/Game/T019847G/Boss/BossBehaviourTree.BossBehaviourTree=1
+/Game/T019847G/Boss/BossBoard.BossBoard=1
+/Game/T019847G/Boss/BossController.BossController=1
+/Game/T019847G/Boss/BossFightManager.BossFightManager=1
+/Game/T019847G/Boss/CrystalBossActor.CrystalBossActor=1
+/Game/GW000979/DataStruct/BaseEquipment/BasePickup.BasePickup=0
+/Game/GW000979/DataStruct/BaseEquipment/BaseArmour.BaseArmour=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -4833,7 +4855,7 @@ SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArra
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
 SceneComponent=
-ActorComponent=
+ActorComponent="\"Object.Armour To Drop\" \"Object.Armour To Drop\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[2].KeyType\" \"Object.Blackboard.Keys.Keys[3].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -4842,9 +4864,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Character=
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Pawn=
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -4918,10 +4940,10 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C=
 RangedAI_C=
-BaseAI_C="\"Object.SpawnTotal\" \"Object.SpawnTotal\" "
+BaseAI_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
+BaseArmour_C=
 BaseAccessory_C=
 Calc Offence Stats="\"Struct.TempDamage\" "
 Calc Defence Stats="\"Struct.TempArmour\" "
@@ -4929,10 +4951,10 @@ TopDownGameMode_C=
 GameModeBase=
 Info=
 TopDownCharacterCleaned_C="\"Object.CrystalPowerGeneration\" \"Object.CrystalPowerGeneration\" "
-Inventory_C=
+Inventory_C="\"Object.Armour To Drop\" \"Object.Armour To Drop\" "
 Baseprojectile_C=
 BasePickUp_C=
-BaseShield_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
+BaseShield_C=
 Calc Utlity Stats="\"Struct.Temp Speed\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -4964,7 +4986,7 @@ REINST_BaseAI_C_299="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 REINST_BaseAI_C_317="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[9]\" "
 REINST_BaseAI_C_335="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_BaseAI_C_353="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-BossAI_C="\"Object.SpawnTotal\" \"Object.SpawnTotal\" "
+BossAI_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 Crystal_C=
 REINST_BaseAI_C_697="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 REINST_BaseAI_C_723="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
@@ -4989,7 +5011,7 @@ Miner_C=
 Remove_Area1_Blocker_C=
 WidgetComponent="\"Object.Rendering.BackgroundColor\" "
 REINST_CorruptedSlave_C_558="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-CrystalBossActor_C="\"Object.PulseTimer\" \"Object.PulseTimer\" "
+CrystalBossActor_C=
 REINST_CorruptedSlave_C_1167="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 REINST_BaseAI_C_1165="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 
@@ -5772,7 +5794,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -5855,26 +5877,26 @@ bFilterTranslucent=True
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/EnemyAgent/CorruptedSlave
-MRUItem1=/Game/AIAgent/ProtoTree
-MRUItem2=/Game/AIAgent/Proto_controller
-MRUItem3=/Game/AIAgent/BaseAI
-MRUItem4=/Game/TopDownBP/Blueprints/CoolDownComponent
-MRUItem5=/Game/AIAgent/Perception
-MRUItem6=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem7=/Game/T019847G/Boss/CrystalBossActor
-MRUItem8=/Game/T019847G/Boss/Crystal
-MRUItem9=/Game/AIAgent/BossAI
-MRUItem10=/Game/AIAgent/I_AI
+MRUItem0=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem1=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem3=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
+MRUItem4=/Game/GW000979/DataStruct/Inventory
+MRUItem5=/Game/GW000979/DataStruct/I_Item_Drop
+MRUItem6=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem7=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem8=/Game/T019847G/Boss/CrystalBossActor
+MRUItem9=/Game/T019847G/Boss/BossFightManager
+MRUItem10=/Game/T019847G/Boss/BossController
 MRUItem11=/Game/Levels/Demo
-MRUItem12=/Game/Levels/MainMenu
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem14=/Game/Levels/Area2-MarketMeshStart
-MRUItem15=/Game/Will/Area1_Blocker_MinableRubble
-MRUItem16=/Game/Levels/Area1-Rework
-MRUItem17=/Game/Will/Remove_Area1_Blocker
-MRUItem18=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
-MRUItem19=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem12=/Game/T019847G/Boss/BossBehaviourTree
+MRUItem13=/Game/EnemyAgent/CorruptedSlave
+MRUItem14=/Game/AIAgent/ProtoTree
+MRUItem15=/Game/AIAgent/Proto_controller
+MRUItem16=/Game/AIAgent/BaseAI
+MRUItem17=/Game/TopDownBP/Blueprints/CoolDownComponent
+MRUItem18=/Game/AIAgent/Perception
+MRUItem19=/Game/TopDownBP/Blueprints/TopDownGameMode
 
 [WidgetTemplatesExpanded]
 Extra=False
