--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,15 +105,16 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/Demo
-MRUItem2=/Game/Levels/Area2-Market
-MRUItem3=/Game/Levels/texturedzoo
-MRUItem4=/Game/Levels/MechanicsLevel
-MRUItem5=/Game/Levels/MainMenu
-MRUItem6=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem7=/Game/Levels/TerrainMap
-MRUItem8=/Game/Levels/BlockOut
+MRUItem0=/Game/Levels/Area1-Rework
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/Demo
+MRUItem3=/Game/Levels/Area2-Market
+MRUItem4=/Game/Levels/texturedzoo
+MRUItem5=/Game/Levels/MechanicsLevel
+MRUItem6=/Game/Levels/MainMenu
+MRUItem7=/Game/Chloe/UI/Main_Menu_level/Main_Menu
+MRUItem8=/Game/Levels/TerrainMap
+MRUItem9=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
@@ -251,6 +252,7 @@ None=======
 ThirdPerson_AnimBP_C=
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 HumanAnimBP_C=
+Destrucible_Barrel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -275,7 +277,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -298,7 +300,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Area1-Rework
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2937,6 +2939,60 @@ AnimMontage.AdditiveSettings=True
 AnimMontage.TimeStretchCurve=True
 AnimMontage.MetaData=True
 AnimMontage.Thumbnail=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Input=True
+Landscape.Actor=True
+DestructibleActor.TransformCommon=True
+DestructibleActor.Materials=True
+DestructibleActor.DestructibleComponent=True
+DestructibleActor.Physics=True
+DestructibleActor.Collision=True
+DestructibleActor.Lighting=True
+DestructibleActor.Rendering=True
+DestructibleActor.Tags=True
+DestructibleActor.Cooking=True
+DestructibleActor.Navigation=True
+DestructibleActor.Actor=True
+DestructibleMesh.Damage=True
+DestructibleMesh.Debris=True
+DestructibleMesh.Flags=True
+DestructibleMesh.HierarchyDepth=True
+DestructibleMesh.Effects=True
+DestructibleMesh.SkeletalMesh=True
+DestructibleMesh.LODSettings=True
+DestructibleMesh.Animation=True
+DestructibleMesh.ImportSettings=True
+DestructibleMesh.Sampling=True
+DestructibleFractureSettings.Voronoi=True
+DestructibleFractureSettings.General=True
+Destrucible_Barrel_C.Tick=True
+Destrucible_Barrel_C.Rendering=True
+Destrucible_Barrel_C.Replication=True
+Destrucible_Barrel_C.Input=True
+Destrucible_Barrel_C.Actor=True
+DestructibleComponent.Variable=True
+DestructibleComponent.TransformCommon=True
+DestructibleComponent.Sockets=True
+DestructibleComponent.DestructibleComponent=True
+DestructibleComponent.Physics=True
+DestructibleComponent.Collision=True
+DestructibleComponent.Lighting=True
+DestructibleComponent.Rendering=True
+DestructibleComponent.Tags=True
+DestructibleComponent.ComponentReplication=True
+DestructibleComponent.Cooking=True
+DestructibleComponent.Events=True
+DestructibleComponent.Materials=True
+Destrucible_Barrel_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3098,6 +3154,8 @@ None=======
 /Game/Josh/AnimationsTest/Push.Push=1
 /Game/Josh/AnimationsTest/Shield_Sheath.Shield_Sheath=1
 /Game/Josh/AnimationsTest/Heavy_Slam_Montage.Heavy_Slam_Montage=0
+/Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM=0
+/Game/Will/Destrucible_Barrel.Destrucible_Barrel=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3107,9 +3165,9 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
-PrimitiveComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
-SceneComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
-ActorComponent=
+PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+SceneComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+ActorComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -3157,7 +3215,7 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[16]\" "
 BaseWeapon_C="\"Object.WeaponStats\" \"Object.WeaponStats\" "
 TestPawn3_C=
 StaticMeshComponent=
-MeshComponent=
+MeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
 BoxComponent=
@@ -3228,12 +3286,18 @@ MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Mater
 ThirdPerson_AnimBP_C=
 AnimInstance=
 HumanAnimBP_C=
+DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
+SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
+DestructibleComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+SkinnedMeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
 Perception_C.Service=True
 BoxComponent.Collision=True
 FoliageType_InstancedStaticMesh.Mesh=True
+DestructibleActor.Physics=True
+DestructibleComponent.Physics=True
 
 [RootWindow]
 ScreenPosition=X=67.000 Y=52.000
@@ -3256,7 +3320,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3941,6 +4005,10 @@ AnimationBlueprintEditor.TimeStamp=2018.09.20-07.56.05
 AnimationBlueprintEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2018.09.20-07.56.16
 PhysicsAssetEditor.LastCompileMethod=Unknown
+ApexDestruction.TimeStamp=2018.09.20-07.58.59
+ApexDestruction.LastCompileMethod=Unknown
+ApexDestructionEditor.TimeStamp=2018.09.20-07.58.59
+ApexDestructionEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3993,7 +4061,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4024,6 +4092,8 @@ LastLogListing=FBXImport
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Will/Destrucible_Barrel.Destrucible_Barrel;
+RecentlyPlaced=/Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM;
 RecentlyPlaced=/Game/Models/Armour/chest__1__Part_1__Ben_Wilkinson/chest_piece_1_gold_Ben_Wilkinson.chest_piece_1_gold_Ben_Wilkinson;
 RecentlyPlaced=/Game/Models/Armour/chest__1__Part_1__Ben_Wilkinson/chest__1_leather_ben_wilkinson.chest__1_leather_ben_wilkinson;
 RecentlyPlaced=/Game/Models/Armour/Chest_1/chest_1__ben_wilkinson.chest_1__ben_wilkinson;
@@ -4042,8 +4112,6 @@ RecentlyPlaced=/Game/Models/finishedassets/oven/Oven_Unwrapped__1_.Oven_Unwrappe
 RecentlyPlaced=/Game/Models/Ben/half_vase_Ben_Wilkinson_09-01-19.half_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart2.equipmentstationpart2;
 RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart1.equipmentstationpart1;
-RecentlyPlaced=/Game/Models/finishedassets/fence/LP_Fence.LP_Fence;
-RecentlyPlaced=/Game/Models/Ben/gate.gate;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4096,26 +4164,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
-MRUItem1=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem2=/Game/Josh/AnimationsTest/Heavy_Uppercut
-MRUItem3=/Game/Josh/HeavyHumanIdleRun_BS
-MRUItem4=/Game/Josh/HumanIdleRun_BS
-MRUItem5=/Game/Josh/1HShieldHumanIdleRun_BP
-MRUItem6=/Game/Josh/1HHumanIdleRun_BP
-MRUItem7=/Game/Josh/BowHumanIdleRun_BP
-MRUItem8=/Game/Josh/Skinned_Player_Skeleton
-MRUItem9=/Game/Josh/Skinned_Player
-MRUItem10=/Game/Josh/AnimationsTest/Shield_Sheath
-MRUItem11=/Game/Josh/HumanAnimBP
-MRUItem12=/Game/Josh/AnimationsTest/Push
-MRUItem13=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem14=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem15=/Game/Josh/TestRoom/Running_Anim
-MRUItem16=/Game/Models/Armour/ShoulderPlateArmour/ShoulderPlateChest
-MRUItem17=/Game/Models/Armour/BronzeHalfHelmet/BronzeHalfHelm
-MRUItem18=/Game/Models/Armour/BronzeFullHelmet/BronzeFullHelm
-MRUItem19=/Game/Models/Armour/LeatherCowlHelmet/LeatherCowlHelm
+MRUItem0=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem1=/Game/Will/Destrucible_Barrel
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem3=/Game/Levels/Area1-Rework
+MRUItem4=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
+MRUItem5=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem6=/Game/Josh/AnimationsTest/Heavy_Uppercut
+MRUItem7=/Game/Josh/HeavyHumanIdleRun_BS
+MRUItem8=/Game/Josh/HumanIdleRun_BS
+MRUItem9=/Game/Josh/1HShieldHumanIdleRun_BP
+MRUItem10=/Game/Josh/1HHumanIdleRun_BP
+MRUItem11=/Game/Josh/BowHumanIdleRun_BP
+MRUItem12=/Game/Josh/Skinned_Player_Skeleton
+MRUItem13=/Game/Josh/Skinned_Player
+MRUItem14=/Game/Josh/AnimationsTest/Shield_Sheath
+MRUItem15=/Game/Josh/HumanAnimBP
+MRUItem16=/Game/Josh/AnimationsTest/Push
+MRUItem17=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem18=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
+MRUItem19=/Game/Josh/TestRoom/Running_Anim
 
 [WidgetTemplatesExpanded]
 Extra=False
