--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/Demo
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem2=/Game/Levels/Area2-Market
 MRUItem3=/Game/Levels/texturedzoo
 MRUItem4=/Game/Levels/MechanicsLevel
@@ -275,7 +275,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -298,11 +298,14 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/SoundManager.SoundManager
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/I_Sound.I_Sound
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2937,6 +2940,139 @@ AnimMontage.AdditiveSettings=True
 AnimMontage.TimeStretchCurve=True
 AnimMontage.MetaData=True
 AnimMontage.Thumbnail=True
+BossFightManager_C.TransformCommon=True
+BossFightManager_C.Rendering=True
+BossFightManager_C.Input=True
+BossFightManager_C.Actor=True
+SoundManager_C.Tick=True
+SoundManager_C.Rendering=True
+SoundManager_C.Replication=True
+SoundManager_C.Input=True
+SoundManager_C.Actor=True
+SoundManager_C.TransformCommon=True
+CorruptedSlave_C.Stats=True
+CorruptedSlave_C.Status=True
+CorruptedSlave_C.Bleed=True
+CorruptedSlave_C.Stun=True
+CorruptedSlave_C.Crystalise=True
+CorruptedSlave_C.Blind=True
+CorruptedSlave_C.Poison=True
+CorruptedSlave_C.LifeSteal=True
+CorruptedSlave_C.Drop=True
+BaseAI_C.Drop=True
+REINST_CorruptedSlave_C_387.None=True
+REINST_CorruptedSlave_C_387.Tick=True
+REINST_CorruptedSlave_C_387.Character=True
+REINST_CorruptedSlave_C_387.Camera=True
+REINST_CorruptedSlave_C_387.Pawn=True
+REINST_CorruptedSlave_C_387.Rendering=True
+REINST_CorruptedSlave_C_387.Replication=True
+REINST_CorruptedSlave_C_387.Input=True
+REINST_CorruptedSlave_C_387.Actor=True
+REINST_CorruptedSlave_C_387.TransformCommon=True
+REINST_CorruptedSlave_C_387.Animation=True
+REINST_CorruptedSlave_C_387.Mesh=True
+REINST_CorruptedSlave_C_387.Physics=True
+REINST_CorruptedSlave_C_387.Clothing=True
+REINST_CorruptedSlave_C_387.Collision=True
+REINST_CorruptedSlave_C_387.Lighting=True
+REINST_CorruptedSlave_C_387.ClothingSimulation=True
+REINST_CorruptedSlave_C_387.Tags=True
+REINST_CorruptedSlave_C_387.Activation=True
+REINST_CorruptedSlave_C_387.Cooking=True
+REINST_CorruptedSlave_C_387.Character Movement: Jumping / Falling=True
+REINST_CorruptedSlave_C_387.Character Movement (General Settings)=True
+REINST_CorruptedSlave_C_387.Character Movement: Walking=True
+REINST_CorruptedSlave_C_387.Character Movement: Swimming=True
+REINST_CorruptedSlave_C_387.Character Movement: Flying=True
+REINST_CorruptedSlave_C_387.Character Movement: Custom Movement=True
+REINST_CorruptedSlave_C_387.Character Movement (Rotation Settings)=True
+REINST_CorruptedSlave_C_387.Character Movement: Physics Interaction=True
+REINST_CorruptedSlave_C_387.Character Movement (Networking)=True
+REINST_CorruptedSlave_C_387.Character Movement=True
+REINST_CorruptedSlave_C_387.Character Movement: Avoidance=True
+REINST_CorruptedSlave_C_387.Character Movement: NavMesh Movement=True
+REINST_CorruptedSlave_C_387.RootMotion=True
+REINST_CorruptedSlave_C_387.NavMovement=True
+REINST_CorruptedSlave_C_387.Velocity=True
+REINST_CorruptedSlave_C_387.PlanarMovement=True
+REINST_CorruptedSlave_C_387.MovementComponent=True
+REINST_CorruptedSlave_C_387.Shape=True
+REINST_CorruptedSlave_C_387.Navigation=True
+REINST_CorruptedSlave_C_465.TransformCommon=True
+REINST_CorruptedSlave_C_465.Animation=True
+REINST_CorruptedSlave_C_465.Mesh=True
+REINST_CorruptedSlave_C_465.None=True
+REINST_CorruptedSlave_C_465.Physics=True
+REINST_CorruptedSlave_C_465.Clothing=True
+REINST_CorruptedSlave_C_465.Collision=True
+REINST_CorruptedSlave_C_465.Lighting=True
+REINST_CorruptedSlave_C_465.ClothingSimulation=True
+REINST_CorruptedSlave_C_465.Rendering=True
+REINST_CorruptedSlave_C_465.Tags=True
+REINST_CorruptedSlave_C_465.Activation=True
+REINST_CorruptedSlave_C_465.Cooking=True
+REINST_CorruptedSlave_C_465.Character Movement: Jumping / Falling=True
+REINST_CorruptedSlave_C_465.Character Movement (General Settings)=True
+REINST_CorruptedSlave_C_465.Character Movement: Walking=True
+REINST_CorruptedSlave_C_465.Character Movement: Swimming=True
+REINST_CorruptedSlave_C_465.Character Movement: Flying=True
+REINST_CorruptedSlave_C_465.Character Movement: Custom Movement=True
+REINST_CorruptedSlave_C_465.Character Movement (Rotation Settings)=True
+REINST_CorruptedSlave_C_465.Character Movement: Physics Interaction=True
+REINST_CorruptedSlave_C_465.Character Movement (Networking)=True
+REINST_CorruptedSlave_C_465.Character Movement=True
+REINST_CorruptedSlave_C_465.Character Movement: Avoidance=True
+REINST_CorruptedSlave_C_465.Character Movement: NavMesh Movement=True
+REINST_CorruptedSlave_C_465.RootMotion=True
+REINST_CorruptedSlave_C_465.NavMovement=True
+REINST_CorruptedSlave_C_465.Velocity=True
+REINST_CorruptedSlave_C_465.PlanarMovement=True
+REINST_CorruptedSlave_C_465.MovementComponent=True
+REINST_CorruptedSlave_C_465.Shape=True
+REINST_CorruptedSlave_C_465.Navigation=True
+REINST_CorruptedSlave_C_465.Character=True
+REINST_CorruptedSlave_C_465.Camera=True
+REINST_CorruptedSlave_C_465.Pawn=True
+REINST_CorruptedSlave_C_465.Input=True
+REINST_CorruptedSlave_C_465.Actor=True
+REINST_CorruptedSlave_C_495.TransformCommon=True
+REINST_CorruptedSlave_C_495.Animation=True
+REINST_CorruptedSlave_C_495.Mesh=True
+REINST_CorruptedSlave_C_495.None=True
+REINST_CorruptedSlave_C_495.Physics=True
+REINST_CorruptedSlave_C_495.Clothing=True
+REINST_CorruptedSlave_C_495.Collision=True
+REINST_CorruptedSlave_C_495.Lighting=True
+REINST_CorruptedSlave_C_495.ClothingSimulation=True
+REINST_CorruptedSlave_C_495.Rendering=True
+REINST_CorruptedSlave_C_495.Tags=True
+REINST_CorruptedSlave_C_495.Activation=True
+REINST_CorruptedSlave_C_495.Cooking=True
+REINST_CorruptedSlave_C_495.Character Movement: Jumping / Falling=True
+REINST_CorruptedSlave_C_495.Character Movement (General Settings)=True
+REINST_CorruptedSlave_C_495.Character Movement: Walking=True
+REINST_CorruptedSlave_C_495.Character Movement: Swimming=True
+REINST_CorruptedSlave_C_495.Character Movement: Flying=True
+REINST_CorruptedSlave_C_495.Character Movement: Custom Movement=True
+REINST_CorruptedSlave_C_495.Character Movement (Rotation Settings)=True
+REINST_CorruptedSlave_C_495.Character Movement: Physics Interaction=True
+REINST_CorruptedSlave_C_495.Character Movement (Networking)=True
+REINST_CorruptedSlave_C_495.Character Movement=True
+REINST_CorruptedSlave_C_495.Character Movement: Avoidance=True
+REINST_CorruptedSlave_C_495.Character Movement: NavMesh Movement=True
+REINST_CorruptedSlave_C_495.RootMotion=True
+REINST_CorruptedSlave_C_495.NavMovement=True
+REINST_CorruptedSlave_C_495.Velocity=True
+REINST_CorruptedSlave_C_495.PlanarMovement=True
+REINST_CorruptedSlave_C_495.MovementComponent=True
+REINST_CorruptedSlave_C_495.Shape=True
+REINST_CorruptedSlave_C_495.Navigation=True
+REINST_CorruptedSlave_C_495.Character=True
+REINST_CorruptedSlave_C_495.Camera=True
+REINST_CorruptedSlave_C_495.Pawn=True
+REINST_CorruptedSlave_C_495.Input=True
+REINST_CorruptedSlave_C_495.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3098,6 +3234,10 @@ None=======
 /Game/Josh/AnimationsTest/Push.Push=1
 /Game/Josh/AnimationsTest/Shield_Sheath.Shield_Sheath=1
 /Game/Josh/AnimationsTest/Heavy_Slam_Montage.Heavy_Slam_Montage=0
+/Game/TopDownBP/Blueprints/SoundManager.SoundManager=1
+/Game/TopDownBP/Blueprints/I_Sound.I_Sound=0
+/Game/EnemyAgent/CorruptedSlave.CorruptedSlave=0
+/Game/TopDownBP/Blueprints/SoundEnum.SoundEnum=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3118,9 +3258,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character=
+Character="\"Object.Sound Manager\" \"Object.Sound Manager\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn=
+Pawn="\"Object.Sound Manager\" \"Object.Sound Manager\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3137,7 +3277,7 @@ AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.Sound Manager\" \"Object.Sound Manager\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3256,7 +3396,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3941,6 +4081,10 @@ AnimationBlueprintEditor.TimeStamp=2018.09.20-07.56.05
 AnimationBlueprintEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2018.09.20-07.56.16
 PhysicsAssetEditor.LastCompileMethod=Unknown
+ApexDestruction.TimeStamp=2018.09.20-07.58.59
+ApexDestruction.LastCompileMethod=Unknown
+ApexDestructionEditor.TimeStamp=2018.09.20-07.58.59
+ApexDestructionEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -4024,6 +4168,7 @@ LastLogListing=FBXImport
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/SoundManager.SoundManager;
 RecentlyPlaced=/Game/Models/Armour/chest__1__Part_1__Ben_Wilkinson/chest_piece_1_gold_Ben_Wilkinson.chest_piece_1_gold_Ben_Wilkinson;
 RecentlyPlaced=/Game/Models/Armour/chest__1__Part_1__Ben_Wilkinson/chest__1_leather_ben_wilkinson.chest__1_leather_ben_wilkinson;
 RecentlyPlaced=/Game/Models/Armour/Chest_1/chest_1__ben_wilkinson.chest_1__ben_wilkinson;
@@ -4043,7 +4188,6 @@ RecentlyPlaced=/Game/Models/Ben/half_vase_Ben_Wilkinson_09-01-19.half_vase_Ben_W
 RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart2.equipmentstationpart2;
 RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart1.equipmentstationpart1;
 RecentlyPlaced=/Game/Models/finishedassets/fence/LP_Fence.LP_Fence;
-RecentlyPlaced=/Game/Models/Ben/gate.gate;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4096,26 +4240,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
-MRUItem1=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem2=/Game/Josh/AnimationsTest/Heavy_Uppercut
-MRUItem3=/Game/Josh/HeavyHumanIdleRun_BS
-MRUItem4=/Game/Josh/HumanIdleRun_BS
-MRUItem5=/Game/Josh/1HShieldHumanIdleRun_BP
-MRUItem6=/Game/Josh/1HHumanIdleRun_BP
-MRUItem7=/Game/Josh/BowHumanIdleRun_BP
-MRUItem8=/Game/Josh/Skinned_Player_Skeleton
-MRUItem9=/Game/Josh/Skinned_Player
-MRUItem10=/Game/Josh/AnimationsTest/Shield_Sheath
-MRUItem11=/Game/Josh/HumanAnimBP
-MRUItem12=/Game/Josh/AnimationsTest/Push
-MRUItem13=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem14=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem15=/Game/Josh/TestRoom/Running_Anim
-MRUItem16=/Game/Models/Armour/ShoulderPlateArmour/ShoulderPlateChest
-MRUItem17=/Game/Models/Armour/BronzeHalfHelmet/BronzeHalfHelm
-MRUItem18=/Game/Models/Armour/BronzeFullHelmet/BronzeFullHelm
-MRUItem19=/Game/Models/Armour/LeatherCowlHelmet/LeatherCowlHelm
+MRUItem0=/Game/TopDownBP/Blueprints/SoundEnum
+MRUItem1=/Game/TopDownBP/Blueprints/SoundStuct
+MRUItem2=/Game/AIAgent/BaseAI
+MRUItem3=/Game/EnemyAgent/CorruptedSlave
+MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem5=/Game/TopDownBP/Blueprints/I_Sound
+MRUItem6=/Game/TopDownBP/Blueprints/SoundManager
+MRUItem7=/Game/Levels/Demo
+MRUItem8=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
+MRUItem9=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem10=/Game/Josh/AnimationsTest/Heavy_Uppercut
+MRUItem11=/Game/Josh/HeavyHumanIdleRun_BS
+MRUItem12=/Game/Josh/HumanIdleRun_BS
+MRUItem13=/Game/Josh/1HShieldHumanIdleRun_BP
+MRUItem14=/Game/Josh/1HHumanIdleRun_BP
+MRUItem15=/Game/Josh/BowHumanIdleRun_BP
+MRUItem16=/Game/Josh/Skinned_Player_Skeleton
+MRUItem17=/Game/Josh/Skinned_Player
+MRUItem18=/Game/Josh/AnimationsTest/Shield_Sheath
+MRUItem19=/Game/Josh/HumanAnimBP
 
 [WidgetTemplatesExpanded]
 Extra=False
