--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Area1-Rework
 MRUItem2=/Game/Levels/Demo
 MRUItem3=/Game/Levels/Area2-Market
 MRUItem4=/Game/Levels/texturedzoo
@@ -253,6 +253,7 @@ ThirdPerson_AnimBP_C=
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 HumanAnimBP_C=
 Destrucible_Barrel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+Spawn Item=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -277,7 +278,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/GW000979
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -300,11 +301,13 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area1-Rework
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/Models/finishedassets/barrel/LP_barrel.LP_barrel
+OpenAssetsAtExit=/Game/Will/Destrucible_Barrel.Destrucible_Barrel
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2993,6 +2996,12 @@ DestructibleComponent.Cooking=True
 DestructibleComponent.Events=True
 DestructibleComponent.Materials=True
 Destrucible_Barrel_C.TransformCommon=True
+SmallHealthPotion_C.Tick=True
+SmallHealthPotion_C.Default=True
+SmallHealthPotion_C.Rendering=True
+SmallHealthPotion_C.Replication=True
+SmallHealthPotion_C.Input=True
+SmallHealthPotion_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3156,18 +3165,20 @@ None=======
 /Game/Josh/AnimationsTest/Heavy_Slam_Montage.Heavy_Slam_Montage=0
 /Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM=0
 /Game/Will/Destrucible_Barrel.Destrucible_Barrel=0
+/Game/GW000979/ItemEnum.ItemEnum=0
+/Game/c024816h/SmallHealthPotion.SmallHealthPotion=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-SceneComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-ActorComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+SceneComponent=
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -3290,6 +3301,7 @@ DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.Debris
 SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
 DestructibleComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 SkinnedMeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+Spawn Item="\"Struct.BarrelTransform\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3320,7 +3332,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4164,26 +4176,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem1=/Game/Will/Destrucible_Barrel
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem3=/Game/Levels/Area1-Rework
-MRUItem4=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
-MRUItem5=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem6=/Game/Josh/AnimationsTest/Heavy_Uppercut
-MRUItem7=/Game/Josh/HeavyHumanIdleRun_BS
-MRUItem8=/Game/Josh/HumanIdleRun_BS
-MRUItem9=/Game/Josh/1HShieldHumanIdleRun_BP
-MRUItem10=/Game/Josh/1HHumanIdleRun_BP
-MRUItem11=/Game/Josh/BowHumanIdleRun_BP
-MRUItem12=/Game/Josh/Skinned_Player_Skeleton
-MRUItem13=/Game/Josh/Skinned_Player
-MRUItem14=/Game/Josh/AnimationsTest/Shield_Sheath
-MRUItem15=/Game/Josh/HumanAnimBP
-MRUItem16=/Game/Josh/AnimationsTest/Push
-MRUItem17=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem18=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem19=/Game/Josh/TestRoom/Running_Anim
+MRUItem0=/Game/c024816h/SmallHealthPotion
+MRUItem1=/Game/GW000979/ItemEnum
+MRUItem2=/Game/Will/Destrucible_Barrel
+MRUItem3=/Game/Models/finishedassets/barrel/LP_barrel
+MRUItem4=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem6=/Game/Levels/Area1-Rework
+MRUItem7=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
+MRUItem8=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem9=/Game/Josh/AnimationsTest/Heavy_Uppercut
+MRUItem10=/Game/Josh/HeavyHumanIdleRun_BS
+MRUItem11=/Game/Josh/HumanIdleRun_BS
+MRUItem12=/Game/Josh/1HShieldHumanIdleRun_BP
+MRUItem13=/Game/Josh/1HHumanIdleRun_BP
+MRUItem14=/Game/Josh/BowHumanIdleRun_BP
+MRUItem15=/Game/Josh/Skinned_Player_Skeleton
+MRUItem16=/Game/Josh/Skinned_Player
+MRUItem17=/Game/Josh/AnimationsTest/Shield_Sheath
+MRUItem18=/Game/Josh/HumanAnimBP
+MRUItem19=/Game/Josh/AnimationsTest/Push
 
 [WidgetTemplatesExpanded]
 Extra=False
